DDP-6951 Added text edits for RGP

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -96,7 +96,7 @@
             }
         },
         "Quote": {
-            "Text": "«En este proyecto de investigación se entiende realmente la importancia de vincular a los pacientes como colaboradores y en pedirles que participen de una manera novedosa. Es esencial hacerlo, porque <span class=\"Accent\">a menudo los pacientes son quienes comienzan a dirigir el rumbo de la investigación</span>»",
+            "Text": "«En este proyecto de investigación se entiende realmente la importancia de vincular a los pacientes como colaboradores y en pedirles que participen de una manera novedosa. Es esencial hacerlo, porque <span class=\"Accent\">a menudo los pacientes son quienes comienzan a dirigir el rumbo de la investigación</span>».",
             "Author": "Matt Might, cuidador y director del Hugh Kaul Precision Medicine Institute"
         },
         "Partners": {
