DDP-6897 add i18n to pan-can, small cleanup&fixes (#891)
* DDP-6897 add i18n to pan-can, small cleanup&fixes

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -600,6 +600,7 @@
         "PreviousButton": "Prev",
         "SavingButton": "Saving",
         "EditButton": "Edit",
+        "SaveButton": "Save",
         "CompleteButton": "Edit",
         "ReviewButton": "View",
         "OpenButton": "Open",
@@ -622,6 +623,9 @@
             "ActivityStatus": "Status",
             "ActivityDate": "Created",
             "ActivityActions": "Actions"
+        },
+        "UserPreferences": {
+            "UserPreferencesTitle": "User preferences"
         },
         "DatePicker": {
             "Day": "Choose day...",
