--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -598,6 +598,7 @@
         "PreviousButton": "Atrás",
         "SavingButton": "Guardando...",
         "EditButton": "Continuar",
+        "SaveButton": "Guardar",
         "CompleteButton": "Editar",
         "ReviewButton": "Ver",
         "OpenButton": "Abrir",
@@ -620,6 +621,9 @@
             "ActivityStatus": "Estado",
             "ActivityDate": "Creado",
             "ActivityActions": "Acciones"
+        },
+        "UserPreferences": {
+            "UserPreferencesTitle": "Preferencias del Usuario"
         },
         "DatePicker": {
             "Day": "Escoja el día...",
